# argus-panoptes

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
config/: config.example.toml  default.toml
crates/agents/: Cargo.toml
crates/agents/src/: coding.rs  command.rs  lib.rs  planning.rs  pty_tool.rs  research.rs  review.rs  testing.rs  traits.rs  workflow.rs  writing.rs
crates/agents/src/pty_tools/: claude.rs  generic.rs  mod.rs
crates/agents/tests/: integration_agents.rs
crates/api/: Cargo.toml
crates/api/src/: auth.rs  lib.rs  main.rs  rate_limit.rs  routes.rs  state.rs
crates/api/tests/: integration.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  message.rs  security.rs  task.rs  traits.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: config.rs  lib.rs  pty_client.rs  routing.rs  triage.rs  zeroclaw_triage.rs
crates/coordinator/tests/: integration.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  client.rs  config.rs  lib.rs  openai.rs  retry.rs
crates/memory/: Cargo.toml
crates/memory/src/: embedding.rs  lib.rs  retrieval.rs  store.rs  types.rs
crates/memory/tests/: integration.rs
crates/pty-mcp/: Cargo.toml
crates/pty-mcp/src/: lib.rs  parser.rs  server.rs  session.rs  tools.rs
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/deployment/: ORBSTACK.md
