[workspace]
members = [
    "crates/coordinator",
    "crates/pty-mcp",
    "crates/agents",
    "crates/memory",
    "crates/common",
    "crates/api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jim McG"]
license = "MIT"
repository = "https://github.com/jtmcg3/argus-panoptes"

[workspace.dependencies]
# Local crates
panoptes-coordinator = { path = "crates/coordinator" }
panoptes-pty-mcp = { path = "crates/pty-mcp" }
panoptes-agents = { path = "crates/agents" }
panoptes-memory = { path = "crates/memory" }
panoptes-common = { path = "crates/common" }
panoptes-api = { path = "crates/api" }

# External: ZeroClaw
# Default: Use git repo for CI/portable builds
# Override locally with: [patch.crates-io] zeroclaw = { path = "../zeroclaw" }
zeroclaw = { git = "https://github.com/zeroclaw-labs/zeroclaw.git", branch = "main" }

# External: Argus PTY components (reference for extraction)
# argus = { path = "../argus" }

# MCP Protocol
rmcp = "0.1"

# Vector database
lancedb = "0.15"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Embeddings (local model)
fastembed = "4"

# Synchronization
once_cell = "1"

# Arrow (for LanceDB schema/data)
arrow-array = "53"
arrow-schema = "53"

# HTTP client (for web research)
reqwest = { version = "0.12", features = ["json"] }

# HTML parsing
scraper = "0.22"

# URL handling
url = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
