[package]
name = "panoptes-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "REST/WebSocket API gateway for Argus-Panoptes"

[dependencies]
panoptes-common = { workspace = true }
panoptes-coordinator = { workspace = true }
panoptes-agents = { workspace = true }
panoptes-memory = { workspace = true }
panoptes-llm = { workspace = true }

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Security
parking_lot = "0.12"

[dev-dependencies]
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
axum = { version = "0.8", features = ["macros"] }
serde_json = { workspace = true }
http-body-util = "0.1"
reqwest = { workspace = true }

[[bin]]
name = "panoptes-api"
path = "src/main.rs"
