[package]
name = "panoptes-coordinator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ZeroClaw-based triage coordinator for Argus-Panoptes"

[dependencies]
panoptes-common = { workspace = true }
panoptes-memory = { workspace = true }

# ZeroClaw for triage/coordination
# NOTE: Commented out until zeroclaw fork is fixed
# zeroclaw = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Configuration
toml = { workspace = true }

# MCP client (for calling agent tools)
rmcp = { workspace = true }
