[package]
name = "panoptes-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LLM client abstraction for Argus-Panoptes agents"

[dependencies]
panoptes-common = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
toml = { workspace = true }
