[package]
name = "panoptes-pty-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP server exposing PTY session management for Claude CLI and other tools"

[[bin]]
name = "pty-mcp-server"
path = "src/bin/server.rs"

[dependencies]
panoptes-common = { workspace = true }

# MCP Protocol
rmcp = { workspace = true }

# PTY management
portable-pty = "0.8"

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Output parsing
regex = "1"
strip-ansi-escapes = "0.2"
